Fix overflowing news scroll
also fix some rwd
add sorting by date to articles
reduce news scroll size to 5 newest articles

--- a/src/app/components/home-page-content/home-page-content.component.scss
+++ b/src/app/components/home-page-content/home-page-content.component.scss
@@ -4,6 +4,8 @@
     display: flex;
     flex-flow: column wrap;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 
     .content-container {
         box-shadow: 0 0 25px rgb(77 77 77);
@@ -74,6 +76,17 @@
 
         @media only screen and (max-width: 1000px) {
             width: 100%;
+        }
+
+        @media only screen and(max-width: 600px) {
+            .photo {
+                visibility: hidden;
+                width: 0;
+            }
+
+            .content-text {
+                width: 100%;
+            }
         }
     }
 }
