--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ body {
     margin: 0;
     background: var.$white;
     font-size: 14pt;
+    overflow-x: hidden;
 }
 
 .main-bg-b {
